--- a/app/src/main/res/layout/act4_mainmenu.xml
+++ b/app/src/main/res/layout/act4_mainmenu.xml
@@ -6,25 +6,41 @@
     android:orientation="vertical"
     android:background="@color/main1"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:weightSum="1"
-        android:orientation="horizontal"
-        android:gravity="right"
+        android:layout_toRightOf="@id/chk"
         >
-        <Button
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:id="@+id/act4_logout"
-            android:background="@color/main1"
-            android:textColor="@color/colorWhite"
-            android:textStyle="bold"
-            android:text="로그아웃"
-            />
-    </LinearLayout>
+            android:layout_weight="0.1"
+            android:weightSum="1"
+            android:orientation="horizontal"
+            android:gravity="right"
+            >
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:id="@+id/chk"
+                android:background="@color/main1"
+                android:textColor="@color/colorWhite"
+                android:textStyle="bold"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:id="@+id/act4_logout"
+                android:background="@color/main1"
+                android:textColor="@color/colorWhite"
+                android:textStyle="bold"
+                android:text="메뉴"
+                />
+        </LinearLayout>
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
