--- a/app/src/main/res/layout/act_menu_set.xml
+++ b/app/src/main/res/layout/act_menu_set.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1"
-    android:background="@color/main1"
-    tools:context=".activity.ACT2_Register">
+    android:background="@color/main1">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -52,7 +51,7 @@
                 android:text="아이디"
                 android:textSize="15dp"
                 android:textStyle="bold"
-            />
+                />
 
             <TextView
                 android:layout_width="match_parent"
@@ -110,7 +109,7 @@
                 android:text="반"
                 android:textStyle="bold"
                 android:textSize="15dp"
-                 />
+                />
 
 
             <TextView
@@ -121,7 +120,7 @@
                 android:text="번호"
                 android:textStyle="bold"
                 android:textSize="15dp"
-                 />
+                />
 
 
             <TextView
@@ -132,7 +131,7 @@
                 android:text="키"
                 android:textStyle="bold"
                 android:textSize="15dp"
-                 />
+                />
 
 
             <TextView
@@ -143,7 +142,7 @@
                 android:text="몸무게"
                 android:textStyle="bold"
                 android:textSize="15dp"
-                 />
+                />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
@@ -160,7 +159,7 @@
                 android:inputType="textPersonName"
                 android:hint="ID"
                 android:textSize="15dp"
-                 />
+                />
 
             <EditText
                 android:id="@+id/act2_pw"
@@ -171,7 +170,7 @@
                 android:inputType="textPersonName"
                 android:hint="PW"
                 android:textSize="15dp"
-                 />
+                />
 
             <EditText
                 android:id="@+id/act2_name"
@@ -182,7 +181,7 @@
                 android:inputType="textPersonName"
                 android:hint="NAME"
                 android:textSize="15dp"
-                 />
+                />
 
             <EditText
                 android:id="@+id/act2_sex"
@@ -193,7 +192,7 @@
                 android:inputType="textPersonName"
                 android:hint="성별"
                 android:textSize="15dp"
-                 />
+                />
 
             <EditText
                 android:id="@+id/act2_school"
@@ -203,7 +202,7 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:hint="SCHOOL"
-                 />
+                />
 
             <EditText
                 android:id="@+id/act2_grade"
@@ -214,7 +213,7 @@
                 android:inputType="textPersonName"
                 android:hint="GRADE"
                 android:textSize="15dp"
-                 />
+                />
 
             <EditText
                 android:id="@+id/act2_cls"
@@ -225,7 +224,7 @@
                 android:inputType="textPersonName"
                 android:hint="CLASS"
                 android:textSize="15dp"
-                 />
+                />
 
             <EditText
                 android:id="@+id/act2_num"
@@ -236,7 +235,7 @@
                 android:inputType="textPersonName"
                 android:hint="NUM"
                 android:textSize="15dp"
-                 />
+                />
 
             <EditText
                 android:id="@+id/act2_tall"
@@ -247,8 +246,7 @@
                 android:inputType="textPersonName"
                 android:hint="LENGTH"
                 android:textSize="15dp"
-                 />
-
+                />
             <EditText
                 android:id="@+id/act2_weight"
                 android:layout_width="match_parent"
@@ -258,7 +256,7 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:hint="WEIGHT"
-                 />
+                />
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
@@ -278,6 +276,6 @@
             android:layout_weight="0.6"
             android:textSize="18dp"
             android:textStyle="bold"
-            android:text="완  료" />
+            android:text="수  정" />
     </LinearLayout>
 </LinearLayout>
